--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
 <header>
 	<nav>
 		<ul id="navigation">
-			<a href="file:///C:/Users/xijak/Desktop/agr.uni/index.html" class="logo1">
+			<a href="https://giga12.github.io/home/" class="logo1">
 				<img class="logo"  src="logo1.png">
 			</a>
-			<a href="file:///C:/Users/xijak/Desktop/agr.uni/index.html"  class="nav">HOME</a>
-			<a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-13/index.html"   class="nav"  class="nav-link scroll">ABOUT US</a>
+			<a href="https://giga12.github.io/home/"  class="nav">HOME</a>
+			<a href="https://giga12.github.io/13/"   class="nav"  class="nav-link scroll">ABOUT US</a>
 			<div class="dropdown">
-  		  	<a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-12/index.html" class="nav" class="nav-link scroll">PRODUCT</a>
+  		  	<a href="https://giga12.github.io/12/" class="nav" class="nav-link scroll">PRODUCT</a>
  	      	<div class="dropdown-content">
- 	        	<a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-14/index.html">NUCLEIC ACID AMPLIFICATION</a>
- 			    <a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-15/index.html">NUCLEIC ACID PURIFICATION</a>
+ 	        	<a href="https://giga12.github.io/14/">NUCLEIC ACID AMPLIFICATION</a>
+ 			    <a href="https://giga12.github.io/15/">NUCLEIC ACID PURIFICATION</a>
  			</div>
 			</div>
-  			<a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-11/index.html" class="nav" class="nav-link scroll">SERVICES</a>
-			<a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-10/index.html" class="nav" class="nav-link scroll" style="margin-right: 10%">CONTACT</a>
+  			<a href="https://giga12.github.io/11/" class="nav" class="nav-link scroll">SERVICES</a>
+			<a href="https://giga12.github.io/10/" class="nav" class="nav-link scroll" style="margin-right: 10%">CONTACT</a>
     		<div class="burger-mum">
     			<div class="burger" onclick="openNav()">
     				<div class="bar"></div>
@@ -60,17 +60,17 @@
 
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="file:///C:/Users/xijak/Desktop/agr.uni/index.html">HOME</a>
-  <a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-13/index.html" class="nav-link scroll" >ABOUT US</a>
+  <a href="https://giga12.github.io/home/">HOME</a>
+  <a href="https://giga12.github.io/13/" class="nav-link scroll" >ABOUT US</a>
   <div class="dropdown">
   <a class="nav-link scroll" id="product">PRODUCT</a>
     <div class="dropdown-content">
-      <a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-14/index.html" id="nuc">NUCLEIC ACID AMPLIFICATION</a>
-      <a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-15/index.html" id="nuc">NUCLEIC ACID PURIFICATION</a>
+      <a href="https://giga12.github.io/14/" id="nuc">NUCLEIC ACID AMPLIFICATION</a>
+      <a href="https://giga12.github.io/15/" id="nuc">NUCLEIC ACID PURIFICATION</a>
     </div>
   </div>
-  <a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-11/index.html"  class="nav-link scroll">SERVICES</a>
-  <a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-10/index.html"  class="nav-link scroll" style="margin-right: 10%">CONTACT</a>
+  <a href="https://giga12.github.io/11/"  class="nav-link scroll">SERVICES</a>
+  <a href="https://giga12.github.io/10/"  class="nav-link scroll" style="margin-right: 10%">CONTACT</a>
 </div>
 
 <div class="title">
@@ -253,22 +253,10 @@
 </div>
 </div>
 </section>
-
-
-
-
-
-
 </div>
-
-
-
-
-
-
 <div class="min-products">
 
-<a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-6/index.html">
+<a href="https://giga12.github.io/6/">
 	<div class="nuc-2-div">
 		<div class="nuc-2-img">
 			<img style="width: 100%" src="nuc 6.jpg">
@@ -279,7 +267,7 @@
 	</div>
 </a>
 
-<a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-8/index.html">
+<a href="https://giga12.github.io/8/">
 	<div class="nuc-2-div">
 		<div class="nuc-2-img">
 			<img style="width: 100%" src="nuc 8.jpg">
@@ -290,7 +278,7 @@
 	</div>
 </a>
 
-<a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-9/index.html">
+<a href="https://giga12.github.io/9/">
 	<div class="nuc-2-div">
 		<div class="nuc-2-img">
 			<img style="width: 100%" src="nuc 9.jpg">
@@ -301,7 +289,7 @@
 	</div>
 </a>
 
-<a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-16/index.html">
+<a href="https://giga12.github.io/16/">
   <div class="nuc-2-div">
     <div class="nuc-2-img">
       <img style="width: 100%" src="nuc 9.jpg">
@@ -312,7 +300,7 @@
   </div>
 </a>
 
-<a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-17/index.html">
+<a href="https://giga12.github.io/17/">
   <div class="nuc-2-div">
     <div class="nuc-2-img">
       <img style="width: 100%" src="nuc 9.jpg">
@@ -323,7 +311,7 @@
   </div>
 </a>
 
-<a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-18/index.html">
+<a href="https://giga12.github.io/18/">
   <div class="nuc-2-div">
     <div class="nuc-2-img">
       <img style="width: 100%" src="nuc 9.jpg">
